argocd/media/sonarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        ports:
        - containerPort: 8989
        volumeMounts:
        - mountPath: "/config"
          name: sonarr-config
        - mountPath: "/mnt/media"
          name: media-nfs
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-pvc
        - name: media-nfs
          persistentVolumeClaim:
            claimName: media-nfs-pvc
