argocd/media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: sonarr-svc
  namespace: media
spec:
  selector:    
    app: sonarr
  type: ClusterIP
  ports:  
  - name: http
    port: 8989
    targetPort: 8989
    protocol: TCP
